--- a/html_advanced/30-styleguide.html
+++ b/html_advanced/30-styleguide.html
@@ -1,11 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-        <title>Styleguide - Techium</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
         <meta name="description" content="Techium is a digital agency">
         <link rel="icon" type="image/x-icon" href="./favicon.ico">
         <link rel="icon" type="image/png" href="./favicon.png">
+        <title>Styleguide - Techium</title>
     </head>
     <body>
         <header></header>
@@ -26,7 +27,7 @@
                     <h2>Paragraph</h2>
                 </header>
                 <h2>Heading with a subtitle</h2>
-                <p>This is my subtitle</p>
+                <h2>This is my subtitle</h2>
                 <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
             </section>
             <br>
@@ -69,25 +70,27 @@
                     <hr>
                 </div>
             </section>
+            <br>
+            <!-- Blockquotes -->
+            <section>
+                <header>
+                    <h2>Blockquotes</h2>
+                </header>
+                <div>
+                    <h3>Inline quote</h3>
+                    <q>Stay hungry. Stay foolish.</q>
+                </div>
+                <div>
+                    <h3>Blockquote</h3>
+                    <blockquote>
+                        <p>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.</p>
+                        <footer>
+                            <cite>Kanye West, Musician</cite>
+                        </footer>
+                    </blockquote>
+                </div>
+            </section>
         </main>
-        <br>
-        <!-- Blockquotes -->
-        <section>
-            <header>
-                <h2>Blockquotes</h2>
-            </header>
-            <div>
-                <h3>Inline quote</h3>
-                <q>Stay hungry. Stay foolish.</q>
-            </div>
-            <div>
-                <h3>Blockquote</h3>
-                <blockquote>
-                    <p>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.</p>
-                    <cite>Kanye West, Musician</cite>
-                </blockquote>
-            </div>
-        </section>
         <footer></footer>
     </body>
 </html>
