--- a/html_advanced/36-index.html
+++ b/html_advanced/36-index.html
@@ -94,7 +94,7 @@
                         <p>Everything about us</p>
                     </header>
                     <div>
-                        <img src="images/pic-work-01.jpg" alt="" width="460" height="447">
+                        <img src="images/pic-about-us.jpg" alt="" width="460" height="447">
                         <h3>Who are we</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                         <h3>Our culture</h3>
@@ -115,7 +115,7 @@
                     <div>
                         <article>
                             <div>
-                                <img src="images/pic-work-01.jpg" alt="" width="305" height="205">
+                                <img src="images/pic-blog-01.jpg" alt="" width="305" height="205">
                             </div>
                             <p>Career</p>
                             <a href="#"><h3>Hoc loco tenere se Triarius non potuit.</h3></a>
@@ -124,7 +124,7 @@
                         </article>
                         <article>
                             <div>
-                                <img src="images/pic-work-01.jpg" alt="" width="305" height="205">
+                                <img src="images/pic-blog-02.jpg" alt="" width="305" height="205">
                             </div>
                             <p>Digital Life</p>
                             <a href="#"><h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3></a>
@@ -133,7 +133,7 @@
                         </article>
                         <article>
                             <div>
-                                <img src="images/pic-work-01.jpg" alt="" width="305" height="205">
+                                <img src="images/pic-blog-03.jpg" alt="" width="305" height="205">
                             </div>
                             <p>Social</p>
                             <a href="#"><h3>Bestiarum vero nullum iudicium puto.</h3></a>
@@ -153,21 +153,21 @@
                     </header>
                     <div>
                         <article>
-                                <img src="images/pic-work-01.jpg" alt="Yuri Y. avatar" width="100" height="100">
+                                <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100" height="100">
                             <blockquote>
                                 <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
                                 <cite>Yuri Y.</cite>
                             </blockquote>
                         </article>
                         <article>
-                            <img src="images/pic-work-02.jpg" alt="Dorrie S. avatar" width="100" height="100">
+                            <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100" height="100">
                             <blockquote>
                                 <p>Thank you so much for your help. Techium company is awesome!</p>
                                 <cite>Dorrie S.</cite>
                             </blockquote>
                         </article>
                         <article>
-                            <img src="images/pic-work-02.jpg" alt="Sven H. avatar" width="100" height="100">
+                            <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100" height="100">
                             <blockquote>
                                 <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
                                 <cite>Sven H.</cite>
